[build-system]
requires = [ "maturin>=1.7,<2.0", "setuptools" ]
build-backend = "maturin"

[project]
name = "stanza"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
]
dynamic = ["version"]
dependencies = [
    "setuptools>=73.0.1",
    "emoji",
    "networkx",
    "numpy",
    "protobuf>=3.15.0",
    "requests",
    "tomli;python_version<\"3.11\"",
    "torch>=1.3.0",
    "tqdm",
]
# version = "1.9.0"
description = "A Python NLP Library for Many Human Languages, by the Stanford NLP Group"
keywords = [
    "natural-language-processing",
    "nlp",
    "natural-language-understanding",
    "stanford-nlp deep-learning"
]
readme = "README.md"
authors = [{ name = "Stanford Natural Language Processing Group", email = "horatio@stanford.edu" }]
license = {text = "Apache License 2.0"}

[project.urls]
Homepage = "https://github.com/stanfordnlp/stanza"

[project.optional-dependencies]
dev = [
    "check-manifest",
]
test = [
    "coverage",
    "pytest",
]
transformers = [
    "peft>=0.6.1",
    "transformers>=3.0.0",
]
datasets = [
    "datasets",
]
tokenizers = [
    "jieba",
    "pythainlp",
    "python-crfsuite",
    "spacy",
    "sudachidict_core",
    "sudachipy",
]
visualization = [
    "ipython",
    "spacy",
    "streamlit",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"" = ["*.pl"]

[tool.setuptools.packages.find]
exclude = ["data", "docs", "extern_data", "figures", "saved_models"]
namespaces = false

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "stanza._core"
